--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,12 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ github.token }} # or --password-stdin # Not sure how to do this, but will test later.
+          password: ${{ secrets.WRITE_PERMISSION  }} # currently I am using my secret
+                                                     # you can first create a secret here https://github.com/remla25-team1/model-service/settings/secrets/actions/new with you PAT
+                                                     # then, replace WRITE_PERMISSION with the name of your secret
+                                                     # maybe there are other methods, but this works well
+
+          # password: ${{ github.token }} # or --password-stdin # Not sure how to do this, but will test later.
       - name: Build, tag, and publish image
         run: |
           IMG="ghcr.io/${{github.repository}}"
