--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 Flask==2.3.3
 flasgger==0.9.7.1
-
-joblib==1.4.2
-
-# lib-ml
-# git+https://github.com/remla25-team1/lib-ml.git@v0.0.1#egg=lib_ml
+joblib~=1.4.2
+pandas~=2.2.3
+numpy~=2.2.5
+git+https://github.com/remla25-team1/lib-ml.git@v0.0.1#egg=lib_ml # version should be an env variable
