Fixed compatability issues. Now able to predict using the model.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,8 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GH_TOKEN }}
+          password: ${{ secrets.WRITE_PERMISSION }}
+      - name: Build, tag, and publish image
       - name: Build, tag, and publish image
         run: |
           IMG="ghcr.io/${{github.repository}}"
