--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
 Flask==2.3.3
 flasgger==0.9.7.1
-joblib~=1.4.2
-pandas~=2.2.3
-numpy~=2.2.5
-git+https://github.com/remla25-team1/lib-ml.git@v0.0.1#egg=lib_ml # version should be an env variable
+joblib==1.4.2
+git+https://github.com/remla25-team1/lib-ml.git@v0.0.1#egg=lib_ml
