--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ GH_TOKEN }}
+          password: ${{ secrets.GH_TOKEN }}
       - name: Build, tag, and publish image
         run: |
           IMG="ghcr.io/${{github.repository}}"
