--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,8 @@ name: Release
 on: 
   push: 
     tags: 
-      - "v[0-9]+.[0-9]+.[0-9]+"
-      - "v[0-9]+.[0-9]+.[0-9]+-pre*"
+      - "v*.*.*"
+      - "v*.*.*-pre*"
 jobs:
   build:
     runs-on: ubuntu-24.04
