--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Get latest release version
         id: get_version
         run: |
-          LATEST_TAG=$(git tag --list 'v*.*.*' --sort=-v:refname | head -n1)
+          LATEST_TAG=$(git tag --list 'v*.*.*' --sort=-v:refname | grep -v -- '-pre' | head -n1)
           if [[ -z "$LATEST_TAG" ]]; then
             echo "No release tag found, using v0.0.0"
             LATEST_TAG="v0.0.0"
@@ -44,15 +44,17 @@ jobs:
             PATCH=$(cat VERSION.txt | cut -d . -f 3 | sed 's/[^0-9].*//')
             if [[ -z "$PATCH" ]]; then PATCH=0; fi
           fi
+          RELEASE_VERSION="$MAJOR.$MINOR.$PATCH"
+          echo "release_version=$RELEASE_VERSION" >> $GITHUB_OUTPUT
           NEXT_VERSION="$MAJOR.$MINOR.$PATCH-pre"
           echo "next_version=$NEXT_VERSION" >> $GITHUB_OUTPUT
 
-      - name: Bump to next pre-release version on main
+      - name: Bump to next release version on main
         run: |
-          echo "${{ steps.get_version.outputs.next_version }}" > VERSION.txt
+          echo "${{ steps.get_version.outputs.release_version }}" > VERSION.txt
           if ! git diff --quiet VERSION.txt; then
             git add VERSION.txt
-            git commit -m "chore: bump version to ${{ steps.get_version.outputs.next_version }} after release"
+            git commit -m "chore: bump version to ${{ steps.get_version.outputs.release_version }} after release"
             git push
           else
             echo "No version bump needed, VERSION.txt is already up to date."
@@ -81,20 +83,19 @@ jobs:
         id: tag
         run: |
           BASE_VERSION=$(cat VERSION.txt)
-          if [[ "$BASE_VERSION" =~ -pre$ ]]; then
-            BASE_VERSION=${BASE_VERSION%-pre}
-          fi
-          # Find the highest pre-release version on remote for this base version
+          BASE_VERSION=$(echo "$BASE_VERSION" | sed -E 's/-pre.*$/-pre/')
+          BASE_VERSION=${BASE_VERSION%-pre/}
+          BASE_VERSION=${BASE_VERSION%-pre}
           DATE=$(date +'%Y%m%d')
           TAGS=$(git ls-remote --tags origin "refs/tags/v$BASE_VERSION-pre-$DATE-*" | awk -F/ '{print $3}')
           MAX_N=0
           for TAG in $TAGS; do
-            N=$(echo $TAG | sed -E 's/v[0-9]+\.[0-9]+\.[0-9]+-pre-'$DATE'-(.*)$/\1/')
-            if [[ $N =~ ^[0-9]+$ ]] && (( N > MAX_N )); then
+            N=$(echo $TAG | sed -E 's/.*-pre-'$DATE'-(.*)$/\1/')
+            if [[ $N =~ ^[0-9]+$ ]] && (( 10#$N > 10#$MAX_N )); then
               MAX_N=$N
             fi
           done
-          NEXT_N=$(printf "%03d" $((MAX_N + 1)))
+          NEXT_N=$(printf "%03d" $((10#$MAX_N + 1)))
           NEW_TAG="v$BASE_VERSION-pre-$DATE-$NEXT_N"
           echo "Generated tag: $NEW_TAG"
           echo "new_tag=$NEW_TAG" >> $GITHUB_OUTPUT
