--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ on:
   push: 
     tags: 
       - "v*.*.*"
-      - "v*.*.*-pre*"
+      - "v*.*.*-pre-*"
 jobs:
   build:
     runs-on: ubuntu-24.04
