--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Flask==2.3.3
 flasgger==0.9.7.1
 joblib==1.4.2
+requests==2.32.3
 
 # lib-ml
 git+https://github.com/remla25-team1/lib-ml.git@v0.0.1#egg=lib_ml
